# app/docs/swagger_posts.yaml
@@ -78,6 +78,57 @@ paths:
           description: "successful operation"
         405:
           description: "Not Allowed"
+
+
+  /posts/{PostId}/upvote:
+    post:
+      tags:
+      - "Posts"
+      summary: "Upvote a post"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "PostId"
+        in: "path"
+        description: "Post id to vote"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "Authentication"
+        in: "header"
+        description: "An authorization header"
+        required: true
+        type: string
+      responses:
+        200:
+          description: "successful operation"
+        404:
+          description: "Not found"
+
+  /posts/{PostId}/downvote:
+    post:
+      tags:
+      - "Posts"
+      summary: "Upvote a post"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "PostId"
+        in: "path"
+        description: "Post id to unvote"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "Authentication"
+        in: "header"
+        description: "An authorization header"
+        required: true
+        type: string
+      responses:
+        200:
+          description: "successful operation"
+        404:
+          description: "Not found"
   /posts/{PostId}:
     get:
       tags:
